# clevo-fan-control

./: CMakeLists.txt  DEVELOPMENT_NOTES.md  README.md  clevo-fan-control.service.in  install.sh  uninstall.sh
compiled/: clevo-fan-control
drivers/: Install_tuxedo_drivers.md  update-tuxedo-drivers.sh
src/: main.cpp
utilites/ec_diagnostic/ec_documentation/: QUICK_REFERENCE.md
